--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.apache.flink:flink-clients:1.16.3'
     implementation 'org.apache.flink:flink-ml-lib_2.12:1.12.7'
     implementation 'org.apache.flink:flink-connector-kafka:1.16.3'
+    implementation 'org.apache.flink:flink-csv:1.16.3'  
 
     compileOnly 'org.apache.flink:flink-streaming-java:1.16.3'
     compileOnly 'org.apache.flink:flink-connector-files:1.16.3'
